--- a/main.scss
+++ b/main.scss
@@ -10,13 +10,6 @@
   font-family: $font-body;
   color: $color-primary;
   scroll-behavior: smooth;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  overflow-y: scroll;
-}
-
-*::-webkit-scrollbar {
-  display: none;
 }
 
 @import "layout/_navigation";
